# ChangeLog for net-irc/xchat-systray
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-systray/Attic/ChangeLog,v 1.27 2005/12/20 13:35:05 jer Exp $

  20 Dec 2005; Jeroen Roovers <jer@gentoo.org>
  xchat-systray-2.4.5-r2.ebuild:
  Docs/ChangeLog -> Docs/Changelog (bug #116033).

  25 Oct 2005; Luis Medinas <metalgod@gentoo.org>
  xchat-systray-2.4.5-r2.ebuild:
  Marked Stable on amd64.

  15 Sep 2005; Aron Griffis <agriffis@gentoo.org>
  xchat-systray-2.4.5-r2.ebuild:
  Mark 2.4.5-r2 stable on alpha

  11 Sep 2005; Guy Martin <gmsoft@gentoo.org> xchat-systray-2.4.5-r2.ebuild:
  Stable on hppa.

  07 Jul 2005; Sven Wegener <swegener@gentoo.org>
  xchat-systray-2.4.5-r2.ebuild:
  Marked stable on x86.

  21 Jun 2005; Sven Wegener <swegener@gentoo.org>
  xchat-systray-2.4.5-r1.ebuild, xchat-systray-2.4.5-r2.ebuild:
  Adjusted dependencies to work with net-irc/xchat-gnome.

*xchat-systray-2.4.5-r2 (09 Jun 2005)

  09 Jun 2005; Sven Wegener <swegener@gentoo.org>
  +files/2.4.5-default-icons.patch, +xchat-systray-2.4.5-r2.ebuild:
  Revision bump to pull in a patch that uses the packaged icons as a default
  setting and fallback, if the user supplied directory is not accessible.

  08 Jun 2005; Sven Wegener <swegener@gentoo.org>
  xchat-systray-2.4.5-r1.ebuild:
  Adjusted the pkg_postinst message a bit, bug #95460.

  16 May 2005; Sven Wegener <swegener@gentoo.org>
  xchat-systray-2.4.5-r1.ebuild:
  General cleanup.

  01 Jan 2005; Sven Wegener <swegener@gentoo.org>
  xchat-systray-2.4.5-r1.ebuild:
  Added more error checking. Use doins -r to install files.

  26 Dec 2004; Jeremy Huddleston <eradicator@gentoo.org>
  xchat-systray-2.4.5-r1.ebuild:
  Multilib fixin.

  12 Sep 2004; Sven Wegener <swegener@gentoo.org> -xchat-systray-2.3.1.ebuild,
  -xchat-systray-2.4.0.ebuild:
  Removed old ebuilds.

  05 Sep 2004; Guy Martin <gmsoft@gentoo.org> xchat-systray-2.4.5-r1.ebuild:
  Stable on hppa.
