@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-systray/Attic/xchat-systray-2.4.5-r2.ebuild,v 1.8 2005/12/20 13:35:05 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-systray/Attic/xchat-systray-2.4.5-r2.ebuild,v 1.9 2006/02/19 17:27:38 swegener Exp $
 
 inherit flag-o-matic eutils toolchain-funcs
 
@@ -17,10 +17,7 @@ IUSE=""
 
 RDEPEND=">=dev-libs/glib-2.0.3
 	>=x11-libs/gtk+-2.0.3
-	|| (
-		>=net-irc/xchat-2.0.3
-		>=net-irc/xchat-gnome-0.4
-	)"
+	>=net-irc/xchat-2.0.3"
 
 DEPEND="${RDEPEND}
 	sys-devel/gettext
