@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/xchat-systray
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-systray/Attic/ChangeLog,v 1.27 2005/12/20 13:35:05 jer Exp $
+# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat-systray/Attic/ChangeLog,v 1.28 2006/02/19 17:27:38 swegener Exp $
+
+  19 Feb 2006; Sven Wegener <swegener@gentoo.org>
+  xchat-systray-2.4.5-r2.ebuild:
+  xchat-gnome and xchat are currently no longer compatible.
 
   20 Dec 2005; Jeroen Roovers <jer@gentoo.org>
   xchat-systray-2.4.5-r2.ebuild:
